--- a/Services/package.json
+++ b/Services/package.json
@@ -4,6 +4,7 @@
   "description": "Services for capital Admin",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,5 +30,6 @@
     "mongoose": "^5.8.11",
     "multer": "^1.4.2",
     "socket.io": "^2.3.0"
-  }
+  },
+  "heroku-run-build-script": true
 }
