--- a/Services/package.json
+++ b/Services/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/jorgearojas25/CapitalAdmin#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cool-ascii-faces": "^1.3.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
